--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -103,7 +103,9 @@
       left: 0;
       width: 100%;
       height: 100vh;
+      overflow-y: scroll;
       background-color: $color__main--opacity;
+
     }
     &--footer{
       flex-direction: column;
